# agentOchestrator

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENT_SELECTION_EXPLAINED.md  AGENT_SELECTION_IMPROVEMENTS.md  AGENT_SETUP_GUIDE.md  AI_VALIDATION_FEATURE.md  ALL_FIXES_COMPLETE.md  ALL_ISSUES_RESOLVED.md  API_QUICKSTART.md  API_USAGE.md  BEDROCK_INTEGRATION_SUMMARY.md  BEDROCK_SETUP_GUIDE.md  COMPLETE_SUMMARY.md  CONFIRMATION_SUMMARY.md  CONVERSATIONAL_FEATURES.md  CONVERSATIONAL_FLOW_DIAGRAM.md  CONVERSATIONAL_IMPLEMENTATION_SUMMARY.md  CONVERSATIONAL_QUICKSTART.md  DATA_PROCESSOR_INTERACTIVE_GUIDE.md  DATA_PROCESSOR_USAGE_GUIDE.md  DETAILED_OUTPUT_UPDATE.md  DOCKER_DEPLOYMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_READY.md  Dockerfile  Dockerfile.api  Dockerfile.interactive  ENV_CONSOLIDATION_SUMMARY.md  ENV_SETUP_GUIDE.md  EVALUATORS_GUIDE.md  EVALUATOR_IMPLEMENTATION_SUMMARY.md  FALLBACK_FEATURE_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FINAL_SETUP_GUIDE.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  GATEWAY_FALLBACK_FEATURE.md  (+84 more)
agent_orchestrator/: __init__.py  orchestrator.py  server.py
agent_orchestrator/agents/: __init__.py  agent_registry.py  base_agent.py  direct_agent.py  mcp_agent.py
agent_orchestrator/api/: __init__.py  models.py  server.py  streaming.py
agent_orchestrator/config/: __init__.py  loader.py  models.py
agent_orchestrator/evaluators/: __init__.py  registry.py
agent_orchestrator/formatting/: __init__.py  response_formatter.py
agent_orchestrator/observability/: __init__.py  context.py  cost_tracking.py  metrics.py  metrics_server.py  sanitization.py
agent_orchestrator/reasoning/: __init__.py  ai_reasoner.py  bedrock_reasoner.py  gateway_reasoner.py  hybrid_reasoner.py
agent_orchestrator/utils/: logger.py  query_logger.py  retry.py  security.py
config/: agents.yaml  evaluators.yaml  orchestrator-bedrock.yaml  orchestrator.docker.yaml  orchestrator.gateway.yaml  orchestrator.yaml  prometheus.yml  rules.yaml
docker/: docker-build.sh  docker-health.sh  docker-start.sh  docker-stop.sh  docker-validate.sh  entrypoint-interactive.sh  wait-for-it.sh
examples/: __init__.py  sample_admin.py  sample_calculator.py  sample_data.json  sample_data_processor.py  sample_mcp_server.py  sample_planning_agent.py  sample_search.py  sample_tavily_search.py  sample_tech_insights.py  sample_weather.py  sample_weather_server.py  test_data_processor.py
mcp_server_gateway/: __init__.py  interface.py  registry.py  server.py  server_gateway.py
model_gateway/: .env.example  Dockerfile  __init__.py  requirements.txt  server.py
tests/: conftest.py  test_agents.py  test_bedrock_reasoner.py  test_config.py  test_dual_provider.py  test_orchestrator.py  test_reasoning.py  test_retry.py.skip  test_security.py  test_validation.py
(+45 files in other folders)
